--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,254 @@
-chainlit>=1.3.2
-elevenlabs>=1.50.3
-fastapi[standard]>=0.115.6
-groq>=0.13.1
-langchain-community>=0.3.13
-langchain-groq>=0.2.2
-langchain>=0.3.13
-pydantic==2.10.0
-together>=1.3.10
-langgraph>=0.2.60
-langchain-openai>=0.2.14
-pydantic-settings>=2.7.0
-pre-commit>=4.0.1
-supabase>=2.11.0
-langgraph-checkpoint-duckdb>=2.0.1
-duckdb>=1.1.3
-langgraph-checkpoint-sqlite>=2.0.1
-aiosqlite>=0.20.0
-qdrant-client>=1.12.1
-sentence-transformers>=3.3.1
-pip>=25.0.1
-python-dotenv
-pytz
--e .
+-e git+https://github.com/Sukruth097/agents.git@b1e5882a4a91914937413d9df5615b6b30fc53e3#egg=ai_companion
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.9.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asyncer==0.0.7
+attrs==25.3.0
+backoff==2.2.1
+bidict==0.23.1
+certifi==2025.1.31
+cfgv==3.4.0
+chainlit==2.4.400
+charset-normalizer==3.4.1
+chevron==0.14.0
+click==8.1.8
+colorama==0.4.6
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+dataclasses-json==0.6.7
+debugpy @ file:///croot/debugpy_1736267418885/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+Deprecated==1.2.18
+deprecation==2.1.0
+distlib==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+duckdb==1.2.1
+elevenlabs==1.55.0
+email_validator==2.2.0
+eval_type_backport==0.2.2
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+fastapi==0.115.12
+fastapi-cli==0.0.7
+filelock==3.18.0
+filetype==1.2.0
+frozenlist==1.5.0
+fsspec==2025.3.1
+googleapis-common-protos==1.69.2
+gotrue==2.12.0
+gradio_client==1.8.0
+greenlet==3.1.1
+groq==0.20.0
+grpcio==1.71.0
+grpcio-tools==1.71.0
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.3
+hyperframe==6.1.0
+identify==2.6.9
+idna==3.10
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+inflection==0.5.1
+iniconfig==2.1.0
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1741457126/work
+ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+langchain==0.3.21
+langchain-community==0.3.20
+langchain-core==0.3.49
+langchain-groq==0.3.1
+langchain-openai==0.3.11
+langchain-text-splitters==0.3.7
+langgraph==0.3.21
+langgraph-checkpoint==2.0.23
+langgraph-checkpoint-duckdb==2.0.2
+langgraph-checkpoint-sqlite==2.0.6
+langgraph-prebuilt==0.1.7
+langgraph-sdk==0.1.60
+langsmith==0.3.19
+Lazify==0.4.0
+literalai==0.1.201
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+mcp==1.6.0
+mdurl==0.1.2
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.2.0
+mypy-extensions==1.0.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+networkx==3.4.2
+nodeenv==1.9.1
+numpy==2.2.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+openai==1.69.0
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-exporter-otlp-proto-http==1.31.1
+opentelemetry-instrumentation==0.52b1
+opentelemetry-instrumentation-alephalpha==0.39.0
+opentelemetry-instrumentation-anthropic==0.39.0
+opentelemetry-instrumentation-bedrock==0.39.0
+opentelemetry-instrumentation-chromadb==0.39.0
+opentelemetry-instrumentation-cohere==0.39.0
+opentelemetry-instrumentation-crewai==0.39.0
+opentelemetry-instrumentation-google-generativeai==0.39.0
+opentelemetry-instrumentation-groq==0.39.0
+opentelemetry-instrumentation-haystack==0.39.0
+opentelemetry-instrumentation-lancedb==0.39.0
+opentelemetry-instrumentation-langchain==0.39.0
+opentelemetry-instrumentation-llamaindex==0.39.0
+opentelemetry-instrumentation-logging==0.52b1
+opentelemetry-instrumentation-marqo==0.39.0
+opentelemetry-instrumentation-milvus==0.39.0
+opentelemetry-instrumentation-mistralai==0.39.0
+opentelemetry-instrumentation-ollama==0.39.0
+opentelemetry-instrumentation-openai==0.39.0
+opentelemetry-instrumentation-pinecone==0.39.0
+opentelemetry-instrumentation-qdrant==0.39.0
+opentelemetry-instrumentation-replicate==0.39.0
+opentelemetry-instrumentation-requests==0.52b1
+opentelemetry-instrumentation-sagemaker==0.39.0
+opentelemetry-instrumentation-sqlalchemy==0.52b1
+opentelemetry-instrumentation-threading==0.52b1
+opentelemetry-instrumentation-together==0.39.0
+opentelemetry-instrumentation-transformers==0.39.0
+opentelemetry-instrumentation-urllib3==0.52b1
+opentelemetry-instrumentation-vertexai==0.39.0
+opentelemetry-instrumentation-watsonx==0.39.0
+opentelemetry-instrumentation-weaviate==0.39.0
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+opentelemetry-semantic-conventions-ai==0.4.3
+opentelemetry-util-http==0.52b1
+orjson==3.10.16
+ormsgpack==1.9.1
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pillow==11.1.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
+pluggy==1.5.0
+portalocker==2.10.1
+postgrest==1.0.1
+posthog==3.23.0
+pre_commit==4.2.0
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+propcache==0.3.1
+protobuf==5.29.4
+psutil @ file:///croot/psutil_1736367091698/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyarrow==19.0.1
+pydantic==2.11.2
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+PyJWT==2.10.1
+pytest==8.3.5
+pytest-mock==3.14.0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dotenv==1.1.0
+python-engineio==4.11.2
+python-multipart==0.0.18
+python-socketio==5.12.1
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq @ file:///croot/pyzmq_1734687138743/work
+qdrant-client==1.13.3
+realtime==2.4.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-toolkit==0.14.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.0.1
+setuptools==75.8.0
+shellingham==1.5.4
+simple-websocket==1.1.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+sse-starlette==2.2.1
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+starlette==0.46.1
+storage3==0.11.3
+StrEnum==0.4.15
+supabase==2.15.0
+supafunc==0.9.4
+sympy==1.13.1
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==8.5.0
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+together==1.5.4
+tokenizers==0.21.1
+tomli==2.2.1
+torch==2.6.0
+tornado @ file:///croot/tornado_1733960490606/work
+tqdm==4.67.1
+traceloop-sdk==0.39.0
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+transformers==4.50.3
+triton==3.2.0
+typer==0.15.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+uptrace==1.31.0
+urllib3==2.3.0
+uv==0.6.11
+uvicorn==0.34.0
+uvloop==0.21.0
+virtualenv==20.29.3
+watchfiles==0.20.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+websockets==14.2
+wheel==0.45.1
+wrapt==1.17.2
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.18.3
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zstandard==0.23.0
